# rag-assisted-chess-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: routes_chess.py  vector_search.py  youtube_videos.py
backend/app/rag/: load_milvus.py
backend/app/rag/data_wikichess/: en.py  fr.py
backend/app/services/: lichess_service.py  stockfish_service.py  youtube_service.py
backend/app/utils/: chess_validator.py
docs/: chess-agent-feasibility-study.md  diagram.mmd  ngx-chessboard.md
frontend/: Dockerfile  Dockerfile.dev  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/libs/ngx-chess-board/: package.json  public-api.d.ts  public-api.d.ts.map
frontend/libs/ngx-chess-board/esm2022/: public-api.mjs
frontend/libs/ngx-chess-board/fesm2022/: ngx-chess-board.mjs  ngx-chess-board.mjs.map
frontend/libs/ngx-chess-board/lib/: ngx-chess-board.component.d.ts  ngx-chess-board.component.d.ts.map  ngx-chess-board.module.d.ts  ngx-chess-board.module.d.ts.map
frontend/src/: index.html  main.ts  polyfills.ts  styles.scss
frontend/src/app/: app.component.html  app.module.ts  app.routes.ts
frontend/src/app/pages/: analysis.component.html  analysis.component.ts  home.component.html  home.component.scss  home.component.ts  openings.component.html  openings.component.ts  play.component.html  play.component.scss  play.component.ts  (+3 more)
frontend/src/environments/: environment.production.ts  environment.ts
(+63 files in other folders)
